# godot-wasm-multi

./: README.md
godot/: control.gd  control.gd.uid  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  rust.wasm  wasm_manager.gd  wasm_manager.gd.uid
godot/addons/godot-wasm/: godot-wasm.gdextension.uid
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
script/: build_and_copy.sh
