[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "^1", default-features = false, features = ["derive"] }
serde-json-core = "^0.6"
spin = "^0.9"
once_cell = "^1.21"
lazy_static = "1.4"
serde_json = "1.0.140"

[profile.release]
opt-level = "s"

[profile.release.package.rust]
opt-level = "s"